Fix Exception error when preview data on datamart data set data using attached CSV Flat File as Data Source. [36920]